added cart render, item descriptions, Items in cart count fixed.

--- a/gba-games.html
+++ b/gba-games.html
@@ -19,7 +19,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-collapse navbar-expand-md">
           <div class="container">
-            <a class="navbar-brand" href="index.html">Valgames</a>
+            <a class="navbar-brand" href="#">Valgames</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html"
+                  <a class="nav-link active" aria-current="page" href="#"
                     >Home</a
                   >
                 </li>
@@ -73,14 +73,14 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="#">Contacto</a>
                 </li>
                 <li class="nav-item ms-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
                       id="cartLink"
-                      
+
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -117,7 +117,7 @@
         </div>
         <!-- -->
         <div class="container-fluid me-3 content-row">
-          <div id="all" class="row"></div>
+          <div id="gba-games" class="row"></div>
         </div>
       </div>
     </div>
