--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
                 <li class="nav-item ms-lg-auto">
                   <a
                     class="nav-link d-flex align-items-center bg-secondary-subtle bg-opacity-25 rounded-4"
-                    href="#"
                   >
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
@@ -83,8 +82,8 @@
                         d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
                       />
                     </svg>
-                    <div class="px-2">Cart</div>
-                    <div class="m-1 p-1 bg-white rounded-2 px-2">0</div></a
+                    <div class="px-2" >Cart</div>
+                    <div class="m-1 p-1 bg-dark bg-opacity-75 rounded-2 px-2 text-white" id="cartIcon">0</div></a
                   >
                 </li>
               </ul>
