--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Cart</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,14 +12,14 @@
     />
     <link href="assets/css/styles.css" rel="stylesheet" />
   </head>
-  <body class="products">
+  <body class="cart">
     <!-- body -->
     <div class="container-flex">
       <div class="container">
         <!-- navbar -->
         <nav class="navbar navbar-collapse navbar-expand-md">
           <div class="container">
-            <a class="navbar-brand" href="index.html">Valgames</a>
+            <a class="navbar-brand" href="#">Valgames</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -34,7 +34,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="index.html"
+                  <a class="nav-link active" aria-current="page" href="#"
                     >Home</a
                   >
                 </li>
@@ -73,14 +73,12 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact</a>
+                  <a class="nav-link" href="#">Contacto</a>
                 </li>
                 <li class="nav-item ms-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
-                      id="cartLink"
-                      
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -109,16 +107,17 @@
           </div>
         </nav>
         <!-- banner -->
-        <div class="container-flex">
+        <div class="container">
           <img
-            class="container object-fit-contain"
+            class="img-fluid object-fit-contain banner-products"
             src="assets/img/banner.jpg"
           />
         </div>
         <!-- -->
-        <div class="container-fluid me-3 content-row">
-          <div id="all" class="row"></div>
+        <div class="container-flex mt-3" id="cart">
+          
         </div>
+
       </div>
     </div>
     <script
