added trash bin functionality, home page and footer.Cleaned files not being used.

--- a/gba-games.html
+++ b/gba-games.html
@@ -14,12 +14,12 @@
   </head>
   <body class="products">
     <!-- body -->
-    <div class="container-flex">
+    <div class="">
       <div class="container">
         <!-- navbar -->
         <nav class="navbar navbar-collapse navbar-expand-md">
           <div class="container">
-            <a class="navbar-brand" href="#">Valgames</a>
+            <a class="navbar-brand" href="index.html">Valgames</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -34,7 +34,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
@@ -72,15 +75,11 @@
                   </ul>
                 </li>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
-                </li>
                 <li class="nav-item ms-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
                       id="cartLink"
-
                     >
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
@@ -108,17 +107,51 @@
             </div>
           </div>
         </nav>
-        <!-- banner -->
-        <div class="container-flex">
-          <img
-            class="container object-fit-contain"
-            src="assets/img/banner.jpg"
-          />
-        </div>
+        
         <!-- -->
         <div class="container-fluid me-3 content-row">
           <div id="gba-games" class="row"></div>
         </div>
+               <footer class="border-top mt-5">
+          <div class="container py-4">
+            <div class="row">
+              <!---->
+              <div class="col-md-6 mb-3">
+                <h6 class="text-uppercase fw-bold">Valgames</h6>
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a
+                      href="n64-games.html"
+                      class="text-decoration-none text-dark"
+                      >N64 Games</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="n64-controllers.html"
+                      class="text-decoration-none text-dark"
+                      >N64 Controllers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="gba-games.html"
+                      class="text-decoration-none text-dark"
+                      >GBA Games</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-6 mb-3 text-end">
+                <h6 class="text-uppercase fw-bold">Contact</h6>
+                <p class="mb-1">Email: sebastianastebustos@gmail.com</p>
+                <p class="mb-0">Phone: +56 9 12345678</p>
+              </div>
+            </div>
+            <hr/>
+
+            <div class="text-center small">© 2025 Valgames</div>
+          </div>
       </div>
     </div>
     <script
