--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container-flex">
       <div class="">
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg  ">
+        <nav class="navbar navbar-expand-lg">
           <div class="container">
-            <a class="navbar-brand" href="#">Valgames</a>
+            <a class="navbar-brand" href="index.html">Valgames</a>
             <button
               class="navbar-toggler"
               type="button"
@@ -33,7 +33,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#"
+                  <a
+                    class="nav-link active"
+                    aria-current="page"
+                    href="index.html"
                     >Home</a
                   >
                 </li>
@@ -49,49 +52,62 @@
                   </a>
                   <ul class="dropdown-menu">
                     <li>
-                      <a class="dropdown-item" href="n64-controllers.html">N64 Controllers</a>
+                      <a class="dropdown-item" href="n64-controllers.html"
+                        >N64 Controllers</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="n64-games.html">N64 Games</a>
+                      <a class="dropdown-item" href="n64-games.html"
+                        >N64 Games</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="gba-games.html">GBA Games</a>
+                      <a class="dropdown-item" href="gba-games.html"
+                        >GBA Games</a
+                      >
                     </li>
                     <li>
-                      <a class="dropdown-item" href="products.html">All Products</a>
+                      <a class="dropdown-item" href="products.html"
+                        >All Products</a
+                      >
                     </li>
                   </ul>
                 </li>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
-                </li>
-                <li class="nav-item ms-lg-auto">
-                  <a
-                    class="nav-link d-flex align-items-center bg-secondary-subtle bg-opacity-25 rounded-4"
-                  >
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="32"
-                      height="32"
-                      fill="currentColor"
-                      class="bi bi-cart m-1"
-                      viewBox="0 0 16 16"
+                <li class="nav-item ms-auto">
+                  <div class="">
+                    <a
+                      class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
+                      id="cartLink"
                     >
-                      <path
-                        d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
-                      />
-                    </svg>
-                    <div class="px-2" >Cart</div>
-                    <div class="m-1 p-1 bg-dark bg-opacity-75 rounded-2 px-2 text-white" id="cartIcon">0</div></a
-                  >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="32"
+                        height="32"
+                        fill="currentColor"
+                        class="bi bi-cart m-1"
+                        viewBox="0 0 16 16"
+                      >
+                        <path
+                          d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"
+                        />
+                      </svg>
+                      <div class="p-2">Cart</div>
+                      <div
+                        class="m-1 p-1 bg-dark bg-opacity-75 rounded-2 px-2 text-white"
+                        id="cartIcon"
+                      >
+                        0
+                      </div></a
+                    >
+                  </div>
                 </li>
               </ul>
             </div>
           </div>
         </nav>
         <!-- carrousel -->
-        <div class="container-flex  bg-light-subtle">
+        <div class="container-flex bg-light-subtle">
           <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
               <button
@@ -117,38 +133,36 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img
-                  src="assets/img/car1.jpg"
-                  class="d-block w-100"
-                  alt="..."
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>
-                    Some representative placeholder content for the first slide.
+                <a href="n64-games.html">
+                  <img src="assets/img/mk64.jpg" class="d-block w-100"
+                /></a>
+                <div class="carousel-caption">
+                  <h6>N64 Games</h6>
+                  <p class="small">
+                    The biggest repertoire of N64 games from USA and Japan.
                   </p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img
-                  src="assets/img/car2.jpg"
-                  class="d-block w-100"
-                  alt="..."
-                />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>
-                    Some representative placeholder content for the second
-                    slide.
+                <a href="n64-controllers.html">
+                  <img src="assets/img/n64-controllers.jpg" class="d-block w-100" />
+                </a>
+                <div class="carousel-caption">
+                  <h6>N64 Controllers</h6>
+                  <p class="small">
+                    Tested and in good shape controllers by our members of
+                    Valgames.
                   </p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>
-                    Some representative placeholder content for the third slide.
+                <a href="gba-games.html">
+                  <img src="assets/img/gba-games.jpg" class="d-block w-100" alt="..."
+                /></a>
+                <div class="carousel-caption">
+                  <h6>GBA games</h6>
+                  <p class="small">
+                    Clean labels and original motherboards in Valgames.
                   </p>
                 </div>
               </div>
@@ -180,7 +194,47 @@
           </div>
         </div>
         <!-- -->
-        <div class="container bg-light-subtle">asd</div>
+        <footer class="border-top mt-5">
+          <div class="container py-4">
+            <div class="row">
+              <!---->
+              <div class="col-md-6 mb-3">
+                <h6 class="text-uppercase fw-bold">Valgames</h6>
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    <a
+                      href="n64-games.html"
+                      class="text-decoration-none text-dark"
+                      >N64 Games</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="n64-controllers.html"
+                      class="text-decoration-none text-dark"
+                      >N64 Controllers</a
+                    >
+                  </li>
+                  <li>
+                    <a
+                      href="gba-games.html"
+                      class="text-decoration-none text-dark"
+                      >GBA Games</a
+                    >
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-6 mb-3 text-end">
+                <h6 class="text-uppercase fw-bold">Contact</h6>
+                <p class="mb-1">Email: sebastianastebustos@gmail.com</p>
+                <p class="mb-0">Phone: +56 9 12345678</p>
+              </div>
+            </div>
+            <hr/>
+
+            <div class="text-center small">© 2025 Valgames</div>
+          </div>
+        </footer>
       </div>
     </div>
     <script
