small fix on navbar collapse (products and cart misalligned), added clickable text on carrousel

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container-flex">
       <div class="">
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-collapse navbar-expand-sm">
           <div class="container">
             <a class="navbar-brand" href="index.html">Valgames</a>
             <button
@@ -40,7 +40,7 @@
                     >Home</a
                   >
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown text-center">
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
@@ -74,7 +74,7 @@
                   </ul>
                 </li>
 
-                <li class="nav-item ms-auto">
+                <li class="nav-item cart-class ms-sm-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
@@ -134,37 +134,45 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <a href="n64-games.html">
-                  <img src="assets/img/mk64.jpg" class="d-block w-100"
-                /></a>
-                <div class="carousel-caption">
-                  <h6>N64 Games</h6>
-                  <p class="small">
-                    The biggest repertoire of N64 games from USA and Japan.
-                  </p>
-                </div>
+                  <img src="assets/img/mk64.jpg" class="d-block w-100" />
+                  <div class="carousel-caption">
+                    <h6>N64 Games</h6>
+                    <p class="h6 small">
+                      The biggest repertoire of N64 games from USA and Japan.
+                    </p>
+                  </div></a
+                >
               </div>
               <div class="carousel-item">
                 <a href="n64-controllers.html">
-                  <img src="assets/img/n64-controllers.jpg" class="d-block w-100" />
-                </a>
-                <div class="carousel-caption">
-                  <h6>N64 Controllers</h6>
-                  <p class="small">
-                    Tested and in good shape controllers by our members of
-                    Valgames.
-                  </p>
-                </div>
+                  <img
+                    src="assets/img/n64-controllers.jpg"
+                    class="d-block w-100"
+                  />
+
+                  <div class="carousel-caption">
+                    <h6>N64 Controllers</h6>
+                    <p class="h6 small">
+                      Tested and in good shape controllers by our members of
+                      Valgames.
+                    </p>
+                  </div></a
+                >
               </div>
               <div class="carousel-item">
                 <a href="gba-games.html">
-                  <img src="assets/img/gba-games.jpg" class="d-block w-100" alt="..."
-                /></a>
-                <div class="carousel-caption">
-                  <h6>GBA games</h6>
-                  <p class="small">
-                    Clean labels and original motherboards in Valgames.
-                  </p>
-                </div>
+                  <img
+                    src="assets/img/gba-games.jpg"
+                    class="d-block w-100"
+                    alt="..."
+                  />
+                  <div class="carousel-caption">
+                    <h6>GBA games</h6>
+                    <p class="h6 small">
+                      Clean labels and original motherboards in Valgames.
+                    </p>
+                  </div></a
+                >
               </div>
             </div>
             <button
@@ -230,7 +238,7 @@
                 <p class="mb-0">Phone: +56 9 12345678</p>
               </div>
             </div>
-            <hr/>
+            <hr />
 
             <div class="text-center small">© 2025 Valgames</div>
           </div>
