--- a/n64-controllers.html
+++ b/n64-controllers.html
@@ -41,7 +41,7 @@
                     >Home</a
                   >
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown text-center">
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
@@ -76,7 +76,7 @@
                 </li>
 
                 
-                <li class="nav-item ms-auto">
+                <li class="nav-item cart-class ms-sm-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
