--- a/gba-games.html
+++ b/gba-games.html
@@ -41,7 +41,7 @@
                     >Home</a
                   >
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown text-center">
                   <a
                     class="nav-link dropdown-toggle"
                     href="#"
@@ -75,7 +75,7 @@
                   </ul>
                 </li>
 
-                <li class="nav-item ms-auto">
+                <li class="nav-item cart-class ms-sm-auto">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
