removed navbar collapse, and added logo for smoother look with different resolutions

--- a/products.html
+++ b/products.html
@@ -19,7 +19,7 @@
         <!-- navbar -->
         <nav class="navbar navbar-expand">
           <div class="container">
-            <a class="navbar-brand" href="index.html">Valgames</a>
+            <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" style="height: 30px;"></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -33,14 +33,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="index.html"
-                    >Home</a
-                  >
-                </li>
                 <li class="nav-item dropdown text-center">
                   <a
                     class="nav-link dropdown-toggle"
