--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="container-flex">
       <div class="">
         <!-- navbar -->
-        <nav class="navbar navbar-collapse navbar-expand-sm">
+        <nav class="navbar navbar-expand">
           <div class="container">
-            <a class="navbar-brand" href="index.html">Valgames</a>
+            <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" style="height: 30px;"></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -32,14 +32,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav container align-items-center">
-                <li class="nav-item">
-                  <a
-                    class="nav-link active"
-                    aria-current="page"
-                    href="index.html"
-                    >Home</a
-                  >
-                </li>
+
                 <li class="nav-item dropdown text-center">
                   <a
                     class="nav-link dropdown-toggle"
@@ -50,7 +43,7 @@
                   >
                     Products
                   </a>
-                  <ul class="dropdown-menu">
+                  <ul class="dropdown-menu ">
                     <li>
                       <a class="dropdown-item" href="n64-controllers.html"
                         >N64 Controllers</a
@@ -74,7 +67,7 @@
                   </ul>
                 </li>
 
-                <li class="nav-item cart-class ms-sm-auto">
+                <li class="nav-item cart-class ms-auto ">
                   <div class="">
                     <a
                       class="nav-link d-flex align-items-center bg-opacity-50 rounded-4 btn btn-outline-light"
